# Hermes

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLI_GUIDE.md  COMPLETE_GUIDE.md  COVERAGE_REPORT.md  EXPORTABILITY_ASSESSMENT.md  FINAL_SUMMARY.md  INTEGRATION_ANALYSIS.md  INTEGRATION_COMPLETE.md  INTEGRATION_ROADMAP.md  LLM_DATASET_ENGINE.md  README.md  STATUS.md  SYSTEM_PROMPTS_GUIDE.md  bacon_cleaning_config.yaml  bacon_similarity_config.yaml  checkpoints.md  coverage.json  debug_bacon.py  ground_truth_clean_columns.xlsx  ground_truth_original.xlsx  ground_truth_similarity_results.xlsx  justfile  process_all_365_bacon.py  product_similarity_composition.py  product_similarity_streaming.py  pyproject.toml  run_bacon_cleaning.py  test_3_rows.py  test_bacon_small.py  test_bacon_with_config.py  test_basic.py  test_qwen3_mlx.py  test_sample_bacon.py  test_similarity_composition.py  test_simple_bacon.py
.checkpoints/: checkpoint_03f7aa5f-5ec4-44cb-b7e8-e997808f6bc7.json  checkpoint_169be7b7-ae03-4e8c-8110-c4ff1c943378.json  checkpoint_20d6220d-88ff-4148-813f-4981d9ce8a6c.json  checkpoint_2b50cda4-7dbd-4e61-b1c3-2a1f12dcd5f3.json  checkpoint_31428dbb-774a-4a67-b42a-f901cc42206b.json  checkpoint_34a69806-9d15-440b-ae40-0963ccc7eafc.json  checkpoint_3ede175b-3ca6-44e6-bd25-269b2fb42cef.json  checkpoint_5a5fac5c-db99-414c-9002-890e840faf45.json  checkpoint_5b57f4fe-f19d-4272-b3e9-6f20b3b9875c.json  checkpoint_77fd36a8-24ce-48a4-8e40-42c90c514acb.json  checkpoint_8870246d-7d61-4b99-9e9d-c30aa4aba93c.json  checkpoint_8db1b617-981a-4311-9ee3-6904fb56fabb.json  checkpoint_af9581fa-4b77-4c41-921c-f725c5deb165.json  checkpoint_be1ee515-0c2a-4c55-8bc6-e1e9feebed7e.json  checkpoint_d240c1ab-b979-4ccc-b805-fe16c5bdf6b8.json  checkpoint_f3aac26d-0d79-40d1-9149-4dc9312a6ee7.json  checkpoint_f929bae2-5877-4f63-95fe-5c0f3b1fb6c4.json
.github/: dependabot.yml
docs/: ANALYSIS_SUMMARY.md  FIXES_APPLIED.md  LLM_DATASET_ENGINE.md  PROMPT_STRUCTURE.md  README.md  TECHNICAL_DEEP_DIVE_STRATEGY.md  TECHNICAL_REFERENCE.md
examples/: 01_quickstart.py  02_simple_processor.py  03_structured_output.py  04_with_cost_control.py  05_groq_example.py  06_from_config_file.py  07_async_execution.py  08_streaming_large_files.py  09_system_prompts.py  10_mlx_qwen3_local.py  10_mlx_qwen3_local.yaml  10_ollama_local.yaml  11_together_ai.yaml  12_vllm_custom.yaml  13_custom_client.py  14_provider_presets.py  README.md  bacon_category.yaml  bacon_cleaning_composition.yaml  bacon_cleaning_only.yaml  bacon_confidence.yaml  bacon_explanation.yaml  bacon_quality_score.yaml  bacon_similarity_only.yaml  (+7 more)
(+196 files in other folders)
